Make corrections in pricing cards spacings

--- a/src/styles/components/_pricing-card.scss
+++ b/src/styles/components/_pricing-card.scss
@@ -30,9 +30,18 @@
     font-size: 20px;
     line-height: 26px;
     margin-block: 0;
-  }
+
+      &--best-seller {
+        margin-top: 32px;
+
+        @include desktop {
+          margin-block: 0;
+        }
+      }
+    }
 
   &__price {
+    font-family: "Plus Jakarta Sans", "Arial", "Georgia", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 48px;
@@ -75,5 +84,5 @@
 
   &__button {
     width: 100%;
-}
+  }
 }
